# master-thesis

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
configs/: datasets.yaml  experiment.yaml  models.yaml
docs/: analysis-framework.md
models-explained/01-mlp/: README.md  mlp-architecture.excalidraw
models-explained/02-xgboost/: README.md  xgboost-architecture.excalidraw
models-explained/03-lightgbm/: README.md  lightgbm-architecture.excalidraw
models-explained/04-catboost/: README.md  catboost-architecture.excalidraw
models-explained/05-tabnet/: README.md  tabnet-architecture.excalidraw
models-explained/06-ft-transformer/: README.md  ft-transformer-architecture.excalidraw
models-explained/07-saint/: README.md  saint-architecture.excalidraw
models-explained/08-tabm/: README.md  tabm-architecture.excalidraw
models-explained/09-realmlp/: README.md  realmlp-architecture.excalidraw
models-explained/10-tabpfn-v2/: README.md  tabpfn-architecture.excalidraw
models-explained/11-stab/: README.md  stab-architecture.excalidraw
notebooks/: 01_data_exploration.ipynb  02_results_overview.ipynb  03_statistical_tests.ipynb  04_scaling_analysis.ipynb  05_cost_analysis.ipynb  06_interpretability.ipynb
results/raw/: catboost_adult.json  ft_transformer_adult.json  lightgbm_adult.json  mlp_adult.json  realmlp_adult.json  saint_adult.json  stab_adult.json  tabm_adult.json  tabnet_adult.json  tabpfn_adult.json  xgboost_adult.json
scripts/: checkpoint.sh  download_data.py  evaluate.py  run_all.py  train.py
src/data/: download.py  preprocessing.py  registry.py
src/evaluation/: metrics.py  statistical_tests.py
src/models/: base.py  catboost_model.py  factory.py  ft_transformer.py  lightgbm_model.py  mlp_model.py  realmlp_model.py  saint_model.py  stab_model.py  tabm_model.py  tabnet_model.py  tabpfn_model.py  xgboost_model.py
src/tuning/: search_spaces.py  tuner.py
src/utils/: config.py  environment.py  logging.py  reproducibility.py  timer.py
tests/: conftest.py  test_cv_splits.py  test_factory.py  test_metrics.py  test_model_smoke.py  test_preprocessing.py  test_reproducibility.py  test_search_spaces.py  test_statistical_tests.py
